# Wordle-Bot

./: .gitignore  CMakeLists.txt  README.md
include/: puzzle.h  util.h  word_bank.h  wordle_bot.h
prototype/: count_matrix.py  it_evaluator.py  main.py  my_evaluator.py  naive_evaluator.py  probability_matrix.py  util.py  word_bank.py  word_value_evaluator.py  wordle_bot.py  wordle_guesser.py  wordle_puzzle.py
src/: main.c  puzzle.c  util.c  word_bank.c  wordle_bot.c
src/prototype/: count_matrix.py  it_evaluator.py  main.py  util.py  word_bank.py  word_value_evaluator.py  wordle_bot.py  wordle_puzzle.py
tests/: CMakeLists.txt  WordBankTests.cpp
tests/googletest-1.17.0/googletest/cmake/: internal_utils.cmake
words/: test-words.txt  words.txt
